--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,29 @@
-# dependencies
+# Node
 node_modules/
-# builds
-dist/
-build/
-# env & local
-.env
-.env.*
-# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-# OS/IDE
+package-lock.json
+
+# Build output
+dist/
+build/
+
+# ENV files
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+backend/.env
+frontend/.env
+
+# IDE/OS
 .DS_Store
-Thumbs.db
 .vscode/
+Thumbs.db
+
+# Logs
+logs
+*.log
